--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <main>
     </main>
     <script src="tooloud.min.js"></script>
-    <script src="sketch.js"></script>
+    <script src="explore.js"></script>
   </body>
 </html>
